Reset button and saving state before rotation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Magic Elements</string>
+    <string name="game_message">Mix these elements!</string>
 </resources>
