Second version of design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Magic Elements</string>
-    <string name="game_message">Mix these elements!</string>
+    <string name="game_message">Mix elements to get substances!</string>
 </resources>
